# qmk_firmware

keyboards/helix/rev2/keymaps/yamaken1343/: CMakeLists.txt  config.h  keymap.c  readme.md  readme_jp.md  rules.mk
keyboards/lily58/keymaps/yamaken1343/: config.h  keymap.c  rules.mk
